// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sprite pack-equipment gamedata resolution should resolve a custom icon path from the gamedata tree 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Starting packing the equipment sprite, parallel",
    "System ltx: <sandbox>/custom.ltx",
    "Source icons dir: <sandbox>/icons",
    "Output dir: <sandbox>/with-gamedata.dds",
    "Packed 2 icons in BC3RgbaUnorm format",
    "Saved the packed equipment sprite <sandbox>/with-gamedata.dds",
  ],
}
`;

exports[`sprite pack-equipment gamedata resolution should skip a custom icon path without a gamedata tree 1`] = `
{
  "exitCode": 0,
  "stderr": [
    "Skip icon <sandbox>/../../resources/textures/ui/ui_test_sheet.dds / 'test_icon_custom', reason: IO error: <missing path>",
  ],
  "stdout": [
    "Starting packing the equipment sprite, parallel",
    "System ltx: <sandbox>/custom.ltx",
    "Source icons dir: <sandbox>/icons",
    "Output dir: <sandbox>/without-gamedata.dds",
    "Packed 1 icons in BC3RgbaUnorm format",
    "Saved the packed equipment sprite <sandbox>/without-gamedata.dds",
  ],
}
`;

exports[`sprite pack-equipment gamedata resolution should write the expected files 1`] = `
[
  {
    "path": "custom.ltx",
    "sha256": "aad43480c95c21eb6e76fea253dc2352b161e08823353bf49b3dbd762c5b34b0",
    "size": 262,
  },
  {
    "path": "icons/test_icon_a.dds",
    "sha256": "aa9b7d4a193862807b616041fe6eccaf3808baf14e87b75c555e9b433b61df20",
    "size": 2832,
  },
  {
    "path": "icons/test_icon_b.dds",
    "sha256": "9260d2d9cf41fbedb6e5875ed398e9663c8c07cc09e7411be2e9b19824a2628d",
    "size": 2832,
  },
  {
    "path": "icons/test_icon_c.dds",
    "sha256": "e7c5f367251456cb8358436a8b8ae6537eeff98280b9f64b468425ed314809b8",
    "size": 2832,
  },
  {
    "path": "icons/test_icon_c_variant.dds",
    "sha256": "e7c5f367251456cb8358436a8b8ae6537eeff98280b9f64b468425ed314809b8",
    "size": 2832,
  },
  {
    "path": "with-gamedata.dds",
    "sha256": "7404cafd0270868f7d4783b5ba2c6b469b654f86768a236a6aacc8fd66e874b2",
    "size": 5328,
  },
  {
    "path": "without-gamedata.dds",
    "sha256": "9bc79bc833a712895a64d6be5cc4dd0d5650d5516b196bf183c88f22eddd5c92",
    "size": 5328,
  },
]
`;
